bk_ida/gccida/c1/expand_builtin_prefetch
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_prefetch/src/builtins.c:1191:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_prefetch/src/builtins.c:1220:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_prefetch/src/builtins.c:1251:73: error: use of undeclared identifier 'insn_data_0'
if ( !insn_data_0[1316].operand->predicate( v5, *( ( unsigned __int16 *)insn_data_0[1316].operand + 8)) ) 
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_prefetch/src/builtins.c:1251:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[1316].operand->predicate( v5, *( ( unsigned __int16 *)insn_data_0[1316].operand + 8)) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_prefetch/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_prefetch/src/builtins.c:1252:19: error: use of undeclared identifier 'machine_mode'
v5 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v5); 
                  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_prefetch/src/obj/builtins.o] Error 1
